VQ-1090 | Documents Upload By Client Code/Quotation Code/Proposal Code, also Everything on Need Analysis

--- a/src/app/features/lms/ind/components/need-analysis/components/product-data/product-data.component.html
+++ b/src/app/features/lms/ind/components/need-analysis/components/product-data/product-data.component.html
@@ -3,7 +3,7 @@
       <div class="text-black fw-bold picture">
 
       </div>
-      <div class="text-black fw-bold pt-2 d-flex justify-content-center" style="font-size: 12px; ">{{ "Term Life insurance" }}</div>
+      <div class="text-black fw-bold pt-2 d-flex justify-content-center" style="font-size: 12px; ">{{ productList| product:productId }}</div>
       <div
         class="fw-medium pb-2 d-flex justify-content-center"
         style="color: var(--grey-color); font-size: 11px"
@@ -11,7 +11,8 @@
         {{ "Provides coverage for a specific term" }}
       </div>
       <div class=" d-flex justify-content-center">
-        <button type="button" class="btn btn-primary">select</button>
+        <div  *ngIf="(productList| product:productId) !=='NULL'"><button  type="button" class="btn btn-primary " style="width: 10rem;">select product</button></div>
+        <div *ngIf="(productList| product:productId) ==='NULL'" ><i class="fa-solid fa-ban fs-3 text-danger"></i></div>
       </div>
 
     </div>
