--- a/src/app/features/setups/components/need-analysis/components/lms-module/lms-module.component.css
+++ b/src/app/features/setups/components/need-analysis/components/lms-module/lms-module.component.css
@@ -1,3 +1,11 @@
-.accordion-body {
-    padding: 0 1rem !important;
+.sub_sytem_list {
+    font-weight: 500;
+    font-size: 12px;
+    cursor: pointer;
+    color: var(--primary-color);
+}
+
+.sub_sytem_list:hover {
+    color: black;
+
 }
