--- a/src/app/features/lms/ind/components/need-analysis/components/analysis-product-list/analysis-product-list.component.html
+++ b/src/app/features/lms/ind/components/need-analysis/components/analysis-product-list/analysis-product-list.component.html
@@ -1,81 +1,15 @@
 <div class="text-black fw-medium pr-4">Please select a product to proceed</div>
 
 <div>
-  <div class="row justify-content-start p-4">
+  <div class="row justify-content-start p-4" style="position: relative;">
+    <ngx-spinner type="ball-clip-rotate-multiple" [fullScreen]="false" color="#00529B" size="medium" bdColor = "rgba(255, 255, 255, 0.966)"></ngx-spinner>
+  
+
     <ng-container *ngFor="let item of products">
-      <div class="col-lg-3 col-md-6 col-sm-12 px-2">
-        <app-product-data [productId]="item"></app-product-data>
+      <div class="col-lg-3 col-md-6 col-sm-12 px-2" *ngIf="productList.length>0">
+        <app-product-data [productId]="item" [productList]="productList"></app-product-data>
       </div>
 
     </ng-container>
-
-      <!-- <div class="col-lg-3 col-md-6 col-sm-12 px-2 d-flex">
-        <div class="card shadow rounded-0 m-1">
-          <div class="card-body centered-content">
-            <div class="text-black fw-bold picture">
-
-            </div>
-            <div class="text-black fw-bold pt-2" style="font-size: 12px; ">{{ "Term Life insurance" }}</div>
-            <div
-              class="fw-medium pb-2"
-              style="color: var(--grey-color); font-size: 11px"
-            >
-              {{ "Provides coverage for a specific term" }}
-            </div>
-          </div>
-        </div>
-      </div> -->
-
-
-    <!-- <div class="col-lg-3 col-md-6 col-sm-12 px-2 d-flex">
-      <div class="card shadow rounded-0 m-1">
-        <div class="card-body centered-content">
-          <div class="text-black fw-bold">
-            {{ "2. " }} {{ "Who would you like to protect" }}
-          </div>
-          <div class="text-black fw-bold pt-2" style="font-size: 12px; ">{{ "Term Life insurance" }}</div>
-          <div
-            class="fw-medium pb-2"
-            style="color: var(--grey-color); font-size: 11px"
-          >
-            {{ "Provides coverage for a specific term" }}
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-12 px-2 d-flex">
-      <div class="card shadow rounded-0 m-1">
-        <div class="card-body centered-content">
-          <div class="text-black fw-bold">
-            {{ "2. " }} {{ "Who would you like to protect" }}
-          </div>
-          <div class="text-black fw-bold pt-2" style="font-size: 12px; ">{{ "Term Life insurance" }}</div>
-          <div
-            class="fw-medium pb-2"
-            style="color: var(--grey-color); font-size: 11px"
-          >
-            {{ "Provides coverage for a specific term" }}
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-3 col-md-6 col-sm-12 px-2 d-flex">
-      <div class="card shadow rounded-0 m-1">
-        <div class="card-body centered-content">
-          <div class="text-black fw-bold">
-            {{ "2. " }} {{ "Who would you like to protect" }}
-          </div>
-          <div class="text-black fw-bold pt-2" style="font-size: 12px; ">{{ "Term Life insurance" }}</div>
-          <div
-            class="fw-medium pb-2"
-            style="color: var(--grey-color); font-size: 11px"
-          >
-            {{ "Provides coverage for a specific term" }}
-          </div>
-        </div>
-      </div>
-    </div> -->
-  </div>
+</div>
 </div>
