--- a/src/app/features/setups/components/need-analysis/components/system/system.component.html
+++ b/src/app/features/setups/components/need-analysis/components/system/system.component.html
@@ -10,34 +10,16 @@
         >
           <div>
             <div class="d-flex justify-content-center align-content-center fw-medium">
-              LMS INDIVIDUAL
+              LMS
             </div>
             <div class="d-flex justify-content-center align-content-center pt-4">
-              <button [routerLink]="'../need-analysis/lms-modules'" type="button" name="lms" id="lms" class="btn btn-primary" style="font-size: 12px;">
-                Go to LMS Individual
+              <button (click)="saveSystem('LMS_INDIVIDUAL', '/home/setups/need-analysis/lms-modules')"  type="button" name="lms" id="lms" class="btn btn-primary" style="font-size: 12px;">
+                Go to LMS
               </button>
             </div>
   
           </div>
-        </div>
-  
-        <div
-          class="col-xl-3  col-lg-5 col-md-5 col-sm-10 card p-3"
-          style="border-radius: 0.3rem; margin: 2rem"
-        >
-          <div>
-            <div class="d-flex justify-content-center align-content-center fw-medium">
-              LMS GROUP
-            </div>
-            <div class="d-flex justify-content-center align-content-center pt-4">
-              <button type="button" name="lms" id="lms" class="btn btn-primary" style="font-size: 12px;">
-                Go to LMS Group
-              </button>
-            </div>
-  
-          </div>
-        </div>
-  
+        </div>  
         <div
           class="col-xl-3  col-lg-5 col-md-5 col-sm-10 card p-3"
           style="border-radius: 0.3rem; margin: 2rem"
