--- a/src/app/features/crm/components/country/country.component.html
+++ b/src/app/features/crm/components/country/country.component.html
@@ -362,8 +362,13 @@
           <div class="card-body">
             <div class="row mb-3">
               <div class="form-group col-sm-4">
-                <select class="form-select">
+                <select
+                  class="form-select"
+                  (change)="onSort($event, stateData, 'name')"
+                >
                   <option value="">Sorting Options</option>
+                  <option value="asc">Ascending</option>
+                  <option value="desc">Descending</option>
                 </select>
               </div>
               <div class="form-group col-sm-4">
@@ -404,6 +409,9 @@
                   scrollHeight="400px"
                   class="ui-datatable"
                   [globalFilterFields]="['shortDescription', 'name']"
+                  (onSort)="onSort($event, stateData, sortField)"
+                  [sortField]="sortField"
+                  [sortOrder]="sortOrder"
                 >
                   <ng-template pTemplate="header">
                     <tr>
@@ -442,8 +450,13 @@
           <div class="card-body">
             <div class="row mb-3">
               <div class="form-group col-sm-4">
-                <select class="form-select">
+                <select
+                  class="form-select"
+                  (change)="onSort($event, districtData, 'shortDescription')"
+                >
                   <option value="">Sorting Options</option>
+                  <option value="asc">Ascending</option>
+                  <option value="desc">Descending</option>
                 </select>
               </div>
               <div class="form-group col-sm-4">
@@ -487,6 +500,9 @@
                   scrollHeight="400px"
                   class="ui-datatable"
                   [globalFilterFields]="['shortDescription', 'name']"
+                  (onSort)="onSort($event, districtData, sortField)"
+                  [sortField]="sortField"
+                  [sortOrder]="sortOrder"
                 >
                   <ng-template pTemplate="header">
                     <tr>
@@ -523,8 +539,13 @@
       <div class="card-body">
         <div class="row mb-3">
           <div class="form-group col-sm-3">
-            <select class="form-select">
+            <select
+              class="form-select"
+              (change)="onSort($event, townData, 'shortDescription')"
+            >
               <option value="">Sorting Options</option>
+              <option value="asc">Ascending</option>
+              <option value="desc">Descending</option>
             </select>
           </div>
           <div class="form-group col-sm-3">
@@ -562,6 +583,9 @@
               scrollHeight="400px"
               class="ui-datatable"
               [globalFilterFields]="['shortDescription', 'name']"
+              (onSort)="onSort($event, townData, sortField)"
+              [sortField]="sortField"
+              [sortOrder]="sortOrder"
             >
               <ng-template pTemplate="header">
                 <tr>
